overflow-x - issue solved 3

--- a/css/menu.css
+++ b/css/menu.css
@@ -5,19 +5,21 @@
 
 body {
     position: relative;
+    /*width: 100%;*/
     z-index: 2;
     /*overflow: hidden;*/
-}
-html{
-    position: relative;
-    z-index: 2;
     overflow-x: hidden;
 }
+/*html{*/
+/*    position: relative;*/
+/*    z-index: 2;*/
+/*    overflow-x: hidden;*/
+/*}*/
 
 body::after {
     content: "";
-    /*position: absolute;*/
-    z-index: 1;
+    position: absolute;
+    /*z-index: 1;*/
     left: 0;
     top: 0;
     right: 0;
